--- a/GUI/XLSearchTaskWindow.xaml
+++ b/GUI/XLSearchTaskWindow.xaml
@@ -54,25 +54,35 @@
                                     <RowDefinition Height="1*" />
                                     <RowDefinition Height="1*" />
                                     <RowDefinition Height="1*" />
+                                    <RowDefinition Height="1*" />
+                                    <RowDefinition Height="1*" />
                                 </Grid.RowDefinitions>
-                                <CheckBox x:Name="ckbSearchWithXLAllBeta" Grid.Row="0" Grid.Column="0" Content="Search with All possible Beta peptides" />
-                                <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
+                                <!--<CheckBox x:Name="ckbSearchWithXLAllBeta" Grid.Row="0" Grid.Column="0" Content="Search with Limited peptides" />-->
+                                <!--<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
                                     <Label x:Name="lblXLBetaMsTl" Content="Beta Peptide Precusor mass tolerance" />
                                     <TextBox x:Name="txtXLBetaPrecusorMsTl" Width="45" IsEnabled="{Binding IsChecked, ElementName=ckbSearchWithXLAllBeta}" />
                                     <ComboBox x:Name="cbbXLBetaprecusorMsTl" IsEnabled="{Binding IsChecked, ElementName=ckbSearchWithXLAllBeta}" />
-                                </StackPanel>
+                                </StackPanel>-->
                                 <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0">
                                     <Label x:Name="lblXLprecusorMsTl"  Content="Crosslink Precusor mass tolerance" />
                                     <TextBox x:Name="txtXLPrecusorMsTl" Width="45" />
                                     <ComboBox x:Name="cbbXLprecusorMsTl" />
                                 </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
+                                    <CheckBox x:Name="ckbXLTopNum" VerticalAlignment="Center" Content="Search Top matches" />
+                                    <Label x:Name="lblXLTopNum" Content="Top Num" />
+                                    <TextBox x:Name="txtXLTopNum" Width="45" IsEnabled="{Binding IsChecked, ElementName=ckbXLTopNum}" />
+                                </StackPanel>
                                 <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0">
+                                    <Label x:Name="lblXLMSMS" Content="MS/MS Match" />
+                                    <CheckBox x:Name="ckbCharge_2_3"  VerticalAlignment="Center" Content="Considering Mass 2+ 3+" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1">
+                                    <CheckBox x:Name="ckbCharge_2_3_PrimeFragments"  VerticalAlignment="Center" Content="Considering Mass 2+ 3+ of PrimeFragments" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="0">
                                     <Label x:Name="lblCrosslinker" Content="Crosslinker Type" />
                                     <ComboBox x:Name="cbCrosslinker" />
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
-                                    <Label x:Name="lblXLTopNum" Content="Search Top matches" />
-                                    <TextBox x:Name="txtXLTopNum" Width="45" />
                                 </StackPanel>
                             </Grid>
                             <GroupBox>
@@ -122,7 +132,34 @@
                             </Style>
                         </Expander.Style>
                         <StackPanel>
-
+                            <GroupBox Header="File Load Parameters">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1*" />
+                                        <ColumnDefinition Width="1*" />
+                                    </Grid.ColumnDefinitions>
+                                    <StackPanel>
+                                        <StackPanel Margin="5">
+                                            <CheckBox x:Name="useProvidedPrecursor" Content="Use Provided Precursor" IsChecked="True" />
+                                            <CheckBox x:Name="deconvolutePrecursors" Content="Deconvolute Precursors" IsChecked="False" />
+                                        </StackPanel>
+                                    </StackPanel>
+                                </Grid>
+                            </GroupBox>
+                            <GroupBox Header="Peak Trimming">
+                                <StackPanel>
+                                    <CheckBox x:Name="trimMs1" Content="Trim MS1 Peaks" IsChecked="True" />
+                                    <CheckBox x:Name="trimMsMs" Content="Trim MS/MS Peaks" IsChecked="True" />
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label Content="Top N peaks" />
+                                        <TextBox x:Name="TopNPeaksCheckBox" Width="45" />
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <Label Content="Minimum ratio" />
+                                        <TextBox x:Name="MinRatioCheckBox" Width="45" />
+                                    </StackPanel>
+                                </StackPanel>
+                            </GroupBox>
                             <GroupBox Header="In-Silico Digestion Parameters">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
@@ -169,6 +206,10 @@
                                             <Label x:Name="label2_Copy" Content="Product Mass Tolerance" />
                                             <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left"  TextWrapping="Wrap" Width="45" />
                                             <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal" Margin="5">
+                                            <Label x:Name="ffdf" Content="Minimum MM score allowed:" />
+                                            <TextBox x:Name="minScoreAllowed" Width="45" />
                                         </StackPanel>
                                     </StackPanel>
                                     <StackPanel Grid.Column="1">
@@ -282,7 +323,6 @@
                     <Expander x:Name="OutputExpander">
                         <StackPanel Orientation="Vertical">
                             <CheckBox x:Name="ckbPercolator" Content="Output for Percolator" />
-                            <CheckBox x:Name="ckbCLMSVault" Content="Output for CLMSVault" />
                             <CheckBox x:Name="ckbPepXML" Content="Output for pepXML" />
                             <CheckBox x:Name="ckbCrosslink" Content="Output for Crosslink" />
                             <CheckBox x:Name="ckbAllResults" Content="Output for AllResults include Normal, Loop, Deadend" />
