--- a/GUI/GPTMDTaskWindow.xaml
+++ b/GUI/GPTMDTaskWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
-        Title="GPTMDTaskWindow" Width="750" Height="750" WindowStartupLocation="CenterScreen">
+        Title="GPTMD Task" Width="750" Height="750" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
