--- a/GUI/NeoSearchTaskWindow.xaml
+++ b/GUI/NeoSearchTaskWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetaMorpheusGUI"
         mc:Ignorable="d"
-        Title="Search Task" Width="750" Height="880" WindowStartupLocation="CenterScreen">
+        Title="Neo Task" Width="750" Height="880" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -111,7 +111,7 @@
                         </StackPanel>
                     </Expander>
                 </GroupBox>
-                
+
                 <GroupBox Header="Modifications" DockPanel.Dock="Top">
                     <Expander x:Name="ModExpander" Collapsed="ApmdExpander_Collapsed">
                         <Expander.Style>
@@ -127,6 +127,7 @@
                         <StackPanel>
                             <Grid>
                                 <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*" />
                                     <ColumnDefinition Width="1*" />
                                     <ColumnDefinition Width="1*" />
                                 </Grid.ColumnDefinitions>
@@ -150,6 +151,25 @@
                                     </TreeView>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
+                                    <Label Content="Variable" />
+                                    <TreeView x:Name="variableModsTreeView" ItemsSource="{Binding}" Height="400">
+                                        <TreeView.Resources>
+                                            <HierarchicalDataTemplate DataType="{x:Type local:ModTypeForTreeView}" ItemsSource="{Binding Children}">
+                                                <StackPanel Orientation="Horizontal" Background="{Binding Background}">
+                                                    <CheckBox IsChecked="{Binding Use}" />
+                                                    <TextBlock Text="{Binding DisplayName}" />
+                                                </StackPanel>
+                                            </HierarchicalDataTemplate>
+                                            <DataTemplate DataType="{x:Type local:ModForTreeView}">
+                                                <StackPanel Orientation="Horizontal" Background="{Binding Background}" ToolTip="{Binding ToolTipStuff}">
+                                                    <CheckBox IsChecked="{Binding Use}" />
+                                                    <TextBlock Text="{Binding DisplayName}" />
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </TreeView.Resources>
+                                    </TreeView>
+                                </StackPanel>
+                                <StackPanel Grid.Column="2">
                                     <Label Content="Database Localized" />
                                     <CheckBox x:Name="localizeAllCheckBox" Content="Localize All Modifications" IsChecked="True" />
                                     <TreeView x:Name="localizeModsTreeView" ItemsSource="{Binding}" Height="400">
@@ -194,12 +214,12 @@
                                         <CheckBox x:Name="calibrate" Content="Calibrate Files" IsChecked="True" IsEnabled="False" Height="20" Width="200" Margin="5"/>
                                             <StackPanel Orientation="Horizontal" Margin="5">
                                                 <Label Content="Precursor Mass Tolerance" />
-                                                <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width="45"  />
+                                                <TextBox x:Name="precursorMassToleranceTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width="45" TextChanged="precursorMassToleranceTextBox_TextChanged"  />
                                                 <ComboBox x:Name="precursorMassToleranceComboBox" HorizontalAlignment="Left" />
                                             </StackPanel>
                                             <StackPanel Orientation="Horizontal" Margin="5">
                                                 <Label Content="Product Mass Tolerance" />
-                                                <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width="45" />
+                                                <TextBox x:Name="productMassToleranceTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Width="45" TextChanged="productMassToleranceTextBox_TextChanged" />
                                                 <ComboBox x:Name="productMassToleranceComboBox" HorizontalAlignment="Left" />
                                             </StackPanel>
                                         </StackPanel>
